# llsc

./: .env.sample  .gitignore  .pdm-python  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PARTICIPANT_DASHBOARD_PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.sh  update_secret_files.py
backend/: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.db  FORMS_SCHEMA_README.md  README.md  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements-test.txt  start_db_local.sh  test.db  test_intake.db  update_ses_templates.py
backend/app/: __init__.py  auth_routes.py  config.py  database.py  pyproject.toml  server.py
backend/app/interfaces/: auth_service.py  email_service.py  email_service_provider.py  file_storage_service.py  match_service.py  matching_algo_service.py  matching_service.py  schedule_service.py  task_service.py  user_data_service.py  user_service.py  volunteer_data_service.py
backend/app/middleware/: auth.py  auth_middleware.py
backend/app/middlewares/: authmiddleware.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 4ba3479cb8df_create_user_table_and_roles.py  59bb2488a76b_insert_roles.py  79de0b981dd8_add_auth_id_to_user_model.py  c9bc2b4d1036_update_users_id_to_uuid_with_default.py
backend/app/models/: AvailabilityTemplate.py  AvailableTime.py  Base.py  Experience.py  Form.py  FormSubmission.py  Match.py  MatchStatus.py  Matches.py  Quality.py  RankingPreference.py  Role.py  Schedule.py  ScheduleState.py  ScheduleStatus.py  SuggestedTime.py  Task.py  Tasks.py  TimeBlock.py  Treatment.py  User.py  UserData.py  VolunteerData.py  __init__.py  schedules.py
backend/app/routes/: __init__.py  auth.py  availability.py  contact.py  email.py  email_test.py  intake.py  match.py  matches.py  matching.py  matching_algo.py  ranking.py  schedule.py  send_email.py  suggested_times.py  task.py  tasks.py  test.py  user.py  user_data.py  volunteer_data.py
backend/app/schemas/: auth.py  availability.py  contact.py  email_template.py  match.py  matches.py  matching.py  schedule.py  suggested_times.py  task.py  time_block.py  user.py  user_data.py  volunteer_data.py
backend/app/schemas/matching/: relevant_users_response.py
backend/app/seeds/: __init__.py  experiences.py  forms.py  match_status.py  qualities.py  ranking_preferences.py  roles.py  runner.py  treatments.py  users.py
backend/app/services/: task_service.py
backend/app/services/email/: amazon_ses_provider.py  email_service.py  email_service_provider.py
backend/app/services/implementations/: auth_service.py  availability_service.py  form_processor.py  intake_form_processor.py  match_completion_service.py  match_service.py  matches_service.py  matching_algo_service.py  matching_service.py  ranking_service.py  schedule_service.py  suggested_times_service.py  task_service.py  user_data_service.py  user_service.py  volunteer_data_service.py
backend/app/services/interfaces/: auth_service.py  email_service.py  email_service_provider.py  entity_service.py  schedule_service.py  simple_entity_service.py  user_service.py
backend/app/utilities/: constants.py  csv_utils.py  db_utils.py  firebase_init.py  firebase_rest_client.py  form_constants.py  service_utils.py  ses_email_service.py  task_utils.py  timezone_utils.py
backend/app/utilities/ses/: ses_init.py  ses_templates.json
backend/docs/: intake_api.md
backend/matching/: .gitignore  main.py  output.txt
backend/matching/algorithms/: algorithm.py
backend/matching/data/: config.py  data_generator.py
backend/migrations/: env.py
backend/migrations/versions/: 062c84c8ff35_change_to_timezone_aware_timeblocks.py  0fb019b7af03_add_tasks_table_with_type_priority_.py  14fdeccc883f_add_pending_volunteer_request_field_to_.py  1e275ca8f74d_seed_treatments_table.py  2141551638c9_add_availability_templates_table.py  23dae9594e1d_merge_migration_heads.py  2a086aa5a4ad_seed_forms_table.py  2ccee7a88d08_add_timezone_column_to_user_data.py  2fb1a0f3d14e_create_schedules_and_timeblocks.py  329a7ab72d38_add_language_enum_and_column_to_users_.py  40bc7d1cefc4_add_schedule_schedule_state_and_time_.py  55934750df90_add_loved_one_fields_to_userdata.py  560fa7da2ff1_added_additional_info_col_to_userdata.py  59bb2488a76b_insert_roles.py  62d18260aaed_merge_restored_migrations.py  6cfd431cb2e9_add_volunteer_data_table.py  747735a17ed8_add_missing_fields_to_user_data.py  77423a45f740_merge_multiple_heads_drop_available_.py  78073cc5fe98_update_treatments_to_match_frontend.py  79de0b981dd8_add_auth_id_to_user_model.py  7b797eccb3aa_add_user_id_foreign_key_to_user_data.py  88c4cf2a6bd2_merge_heads.py  8bfb115acac1_add_approved_to_users.py  8d2cd99b9eb8_add_rejected_enum_value_to_user_model.py  905b6788b114_initial_schema.py  93cc5dac324a_merge_multiple_heads.py  95467f4c5c80_add_scope_column_to_experience_table.py  991416bdc3f6_insert_schedule_states.py  9d7570569af9_ranking_unified_preferences_table_seed_.py  9f1a6d727929_add_volunteer_data_table_with_nullable_user_id.py  a59aeb0bd691_remove_other_treatment_and_other_.py  a6c24b7548f8_create_user_data_table.py  ab35065726ef_add_status_to_form_submissions_and_.py  abcd1234_add_active_column_to_users.py  b11e40c23435_increase_varchar_field_lengths.py  b56e0bf600a2_add_form_status_to_users.py  ba215810568b_convert_all_string_columns_to_text.py  c9bc2b4d1036_update_users_id_to_uuid_with_default.py  d3e4f5g6h7i8_add_user_data_table_for_storing_user_matching_parameters.py  d6d4e2e5af85_set_first_last_name_to_nullable.py  (+14 more)
backend/tests/: conftest.py
backend/tests/fixtures/: models.py
backend/tests/functional/: test_user_routes.py  test_user_service.py
backend/tests/unit/: test.db  test_auth.py  test_availability_service.py  test_csv.py  test_email_provider.py  test_intake_api.py  test_intake_form_processor.py  test_match_route_helpers.py  test_match_service.py  test_match_service_timezone.py  test_ranking_service.py  test_time_block_validation.py  test_user.py  test_user_data_update.py  test_user_schema.py
frontend/: .env.sample  (+6 more)
(+338 files in other folders)
