[project]
name = "llsc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rohan Nankani", email = "rohan.nankani2021@gmail.com"},
]
dependencies = []
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
